# simple-telegram-client

./: .gitignore  LICENSE  Makefile  PRD.md  README.md  pyproject.toml
examples/: send_test_message.py
requirements/: dev-requirements.in  dev-requirements.txt  requirements.txt
src/telegram_client/: __init__.py  client.py  config.py  exceptions.py  utils.py
tests/: test_client.py  test_config.py  test_utils.py
