[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-telegram-client"
version = "0.1.0"
description = "Small reusable Python client for sending Telegram messages from JSON config"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Colm Britton" }]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src", "tests"]
